--- a/eureka-client-stuInfo/src/main/resources/application.yml
+++ b/eureka-client-stuInfo/src/main/resources/application.yml
@@ -3,6 +3,9 @@ server:
 spring:
   application:
     name: eureka-client-stuInfo
+     # 环境 dev:开发环境|test:测试环境|prod:生产环境
+  profiles:
+    active: dev #激活的配置文件
 eureka:
   client:
     service-url:
