--- a/eureka-client-stuInfo/src/main/resources/application.yml
+++ b/eureka-client-stuInfo/src/main/resources/application.yml
@@ -10,5 +10,6 @@ eureka:
   client:
     service-url:
        defaultZone: http://localhost:8761/eureka/
-      
-      
+    register-with-eureka: false
+    fetchRegistry: false
+
