--- a/eureka-client-stuInfo/src/main/resources/application-prod.yml
+++ b/eureka-client-stuInfo/src/main/resources/application-prod.yml
@@ -1,8 +1,8 @@
 spring: 
   datasource:
-    username: root
-    password: qmhbkj20190402@
-    url: jdbc:mysql://47.112.126.70:3333/testweb?useUnicode=true&characterEncoding=UTF-8&&serverTimezone=UTC
+    username: sysqimeng
+    password: 5871a39a16
+    url: jdbc:mysql://47.107.118.156:3306/sysqimeng?useUnicode=true&characterEncoding=UTF-8&&serverTimezone=UTC
     
     driver-class-name: com.mysql.cj.jdbc.Driver
    #type: com.alibaba.druid.pool.DruidDataSource
