--- a/eureka-client-stuInfo/src/main/resources/application.yml
+++ b/eureka-client-stuInfo/src/main/resources/application.yml
@@ -5,11 +5,13 @@ spring:
     name: eureka-client-stuInfo
      # 环境 dev:开发环境|test:测试环境|prod:生产环境
   profiles:
-    active: dev #激活的配置文件
+    active: prod #激活的配置文件
 eureka:
   client:
     service-url:
        defaultZone: http://localhost:8761/eureka/
     register-with-eureka: false
     fetchRegistry: false
-
+mybatis:
+  configuration:
+    map-underscore-to-camel-case: true
