--- a/eureka-client-stuInfo/src/main/resources/application.yml
+++ b/eureka-client-stuInfo/src/main/resources/application.yml
@@ -15,3 +15,8 @@ eureka:
 mybatis:
   configuration:
     map-underscore-to-camel-case: true
+pagehelper:
+    helperDialect: mysql
+    reasonable: true
+    supportMethodsArguments: true
+    params: count=countSql
