--- a/eureka-client-stuInfo/src/main/resources/application-dev.yml
+++ b/eureka-client-stuInfo/src/main/resources/application-dev.yml
@@ -5,7 +5,7 @@ spring:
     #url: jdbc:mysql://m.qimenghb.com:3306/sql664057?useUnicode=true&characterEncoding=UTF-8&&serverTimezone=UTC
     username: root
     password: root
-    url: jdbc:mysql://localhost:3306/studentinform?useUnicode=true&characterEncoding=UTF-8&&serverTimezone=UTC&useAffectedRows=true
+    url: jdbc:mysql://localhost:3306/studentinform?useUnicode=true&characterEncoding=UTF-8&&serverTimezone=Asia/Shanghai&useAffectedRows=true
     
     driver-class-name: com.mysql.cj.jdbc.Driver
     type: com.alibaba.druid.pool.DruidDataSource
