--- a/eureka-client-stuInfo/src/main/resources/application.yml
+++ b/eureka-client-stuInfo/src/main/resources/application.yml
@@ -5,7 +5,14 @@ spring:
     name: eureka-client-stuInfo
      # 环境 dev:开发环境|test:测试环境|prod:生产环境
   profiles:
-    active: prod #激活的配置文件
+    active: dev #激活的配置文件
+  thymeleaf:
+    cache: false
+  servlet:
+    multipart:
+      enabled: true
+      maxFileSize: 10MB
+      maxRequestSize: 10MB
 eureka:
   client:
     service-url:
@@ -15,3 +22,9 @@ eureka:
 mybatis:
   configuration:
     map-underscore-to-camel-case: true
+    jdbc-type-for-null: null
+pagehelper:
+    helperDialect: mysql
+    reasonable: true
+    supportMethodsArguments: true
+    params: count=countSql
