--- a/eureka-client-stuInfo/src/main/resources/application.yml
+++ b/eureka-client-stuInfo/src/main/resources/application.yml
@@ -17,8 +17,8 @@ eureka:
   client:
     service-url:
        defaultZone: http://localhost:8761/eureka/
-    register-with-eureka: false
-    fetchRegistry: false
+    #register-with-eureka: false
+    #fetchRegistry: false
 mybatis:
   configuration:
     map-underscore-to-camel-case: true
