--- a/eureka-client-stuInfo/src/main/resources/log4j.properties
+++ b/eureka-client-stuInfo/src/main/resources/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootLogger=debug, stdout, R,D,E
+log4j.rootLogger=DEBUG, stdout, R,D,E
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
@@ -14,7 +14,7 @@ log4j.appender.R.MaxBackupIndex=1
 log4j.appender.R.layout=org.apache.log4j.PatternLayout
 log4j.appender.R.layout.ConversionPattern=%p %t %c - %m%n
 
-log4j.logger.com.Generator=DEBUG
+log4j.logger.com.Generator=INFO
 
 ### \u8F93\u51FADEBUG \u7EA7\u522B\u4EE5\u4E0A\u7684\u65E5\u5FD7\u5230=E://logs/error.log ###
 log4j.appender.D = org.apache.log4j.DailyRollingFileAppender
