--- a/eureka-client-uesrmanage/src/main/resources/log4j.properties
+++ b/eureka-client-uesrmanage/src/main/resources/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootLogger=DEBUG, stdout, R,D,E
+log4j.rootLogger=INFO, stdout, R,D,E
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
