--- a/eureka-client-uesrmanage/src/main/resources/application.yml
+++ b/eureka-client-uesrmanage/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
     name: eureka-client-uesrmanage
      # 环境 dev:开发环境|test:测试环境|prod:生产环境
   profiles:
-    active: prod #激活的配置文件
+    active: dev #激活的配置文件
   thymeleaf:
     cache: false
   servlet:
