--- a/eureka-client-stuInfo/src/main/resources/log4j.properties
+++ b/eureka-client-stuInfo/src/main/resources/log4j.properties
@@ -18,7 +18,7 @@ log4j.logger.com.Generator=INFO
 
 ### \u8F93\u51FADEBUG \u7EA7\u522B\u4EE5\u4E0A\u7684\u65E5\u5FD7\u5230=E://logs/error.log ###
 log4j.appender.D = org.apache.log4j.DailyRollingFileAppender
-log4j.appender.D.File = ../log.log
+log4j.appender.D.File = log.log
 log4j.appender.D.Append = true
 log4j.appender.D.Threshold = DEBUG 
 log4j.appender.D.layout = org.apache.log4j.PatternLayout
