--- a/eureka-client-stuInfo/src/main/resources/application-dev.yml
+++ b/eureka-client-stuInfo/src/main/resources/application-dev.yml
@@ -42,7 +42,8 @@ spring:
       
       
   redis:
-    database: 0   # Redis数据库索引（默认为0）  
+    #database: 0   # Redis数据库索引（默认为0）  
+    database: 10   # Redis数据库索引（10测试环境）  
     host: 127.0.0.1   
     port: 6379  
     password:   # Redis服务器连接密码（默认为空）   
